refactor: improve null checks and enhance item metadata handling